<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/backgroundrock1"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/city"
        android:background="@color/colorWhite"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/look_at_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorText"
        android:background="@color/colorWhite"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/look_at_map" />

    <Button
        android:id="@+id/find_hotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/find_hotel" />

    <Button
        android:id="@+id/tours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tours" />

    <Button
        android:id="@+id/attractions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/attractions" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:background="@color/colorWhite"
        android:text="@string/days" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/list_days"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:divider="@null"
                android:layout_height="400dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>