<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/backgroundrock1"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorWhite"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text="@string/from" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextViewFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorWhite"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text=""/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorWhite"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text="@string/to" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextViewTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorWhite"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text=""/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorWhite"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:padding="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text="@string/departure_date" />

    <EditText
        android:id="@+id/date_flight_depart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:background="@color/colorWhite"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:inputType="date" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:padding="5dp"
            android:text="@string/return_date" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:gravity="right"
            android:paddingRight="5dp"
            android:layout_weight="1"
            android:text="If you need a return ticket" />
    </LinearLayout>

    <EditText
        android:id="@+id/date_flight_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:background="@color/colorWhite"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:inputType="date" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:padding="5dp"
            android:text="@string/passengers" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:gravity="right"
            android:paddingRight="5dp"
            android:layout_weight="1"
            android:text="No more than 9" />
    </LinearLayout>

    <EditText
        android:id="@+id/amount_passengers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:background="@color/colorWhite"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:digits="123456789"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_find"
        android:layout_marginTop="80dp"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorText"
        android:text="@string/btn_find_tickets"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>