<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/city1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorText"
            android:text="There is city1" />

        <TextView
            android:id="@+id/city2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorText"
            android:text="There is city2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_of_depart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/date_of_depart"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date1"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="Departure"
            android:paddingLeft="10dp"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date_of_arrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/date_of_arrival"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Arrival"
            android:paddingLeft="10dp"
            android:textColor="@color/colorText"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time_of_depart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingTop="3dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:text="@string/time_of_depart" />

        <TextView
            android:id="@+id/time_of_arrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingTop="3dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:text="@string/time_of_arrival" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="3dp"
            android:paddingBottom="10dp"
            android:paddingLeft="11dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:text="Time" />

        <TextView
            android:id="@+id/time2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:paddingTop="3dp"
            android:paddingBottom="10dp"
            android:paddingLeft="11dp"
            android:textColor="@color/colorText"
            android:text="Time" />

    </LinearLayout>

</LinearLayout>